--- a/Cobros_P2/Shared/MainLayout.razor
+++ b/Cobros_P2/Shared/MainLayout.razor
@@ -1,8 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+<BlazoredToasts />
+
 <div class="sidebar">
-    <NavMenu />
-</div>
+   <NavMenu/> 
+</div> 
 
 <div class="main">
     <div class="top-row px-4">
