--- a/Cobros_P2/Pages/Index.razor
+++ b/Cobros_P2/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hola!</h1>
 
-Welcome to your new app.
+Aqui podrá registrar cobros y consultarlos!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+Hecho por: Anthony Brian Jiménez López
