--- a/Cobros_P2/Shared/NavMenu.razor
+++ b/Cobros_P2/Shared/NavMenu.razor
@@ -14,12 +14,17 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Cobros">
-                <span class="oi oi-list" aria-hidden="true"></span> Cobros  
+                <span class="oi oi-list" aria-hidden="true"></span> Cobros
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="CCobros">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta cobros
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="CVentas">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta ventas
             </NavLink>
         </li>
     </ul>
